Fixed a positioning issue with top leaving a gap for absolute position in #content.

--- a/app/styles/navigator.less
+++ b/app/styles/navigator.less
@@ -410,7 +410,7 @@ zoom: 1;*/
 #content {
     visibility: visible;
     position: relative;
-    top: @navHeight;
+    margin-top: @navHeight;
     margin-right: @sideBarWrapperWidth;
 }
 
@@ -591,7 +591,6 @@ zoom: 1;*/
     }
 
     #content {
-        top: @navHeight;
         margin-right: 0;
     }
 
